force-app/main/default/objects/pd_jp_20151124__CsvImportManager__c/pd_jp_20151124__CsvImportManager__c.object-meta.xml
<CustomObject>
    <label>MAPlusAC CsvImportManager</label>
    <nameField>
        <displayFormat>CM-{YYYY}{MM}-{0}</displayFormat>
        <label>CsvManager名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>