force-app/main/default/objects/pd_jp_20151124__CsvImportManager__c/fields/pd_jp_20151124__CsvHeader__c.field-meta.xml
<CustomField>
    <fullName>pd_jp_20151124__CsvHeader__c</fullName>
    <label>CSVヘッダ情報</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>