force-app/main/default/objects/pd_jp_20151124__CsvImportManager__c/fields/pd_jp_20151124__ExportFlg__c.field-meta.xml
<CustomField>
    <fullName>pd_jp_20151124__ExportFlg__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Export処理フラグ</label>
    <type>Checkbox</type>
</CustomField>