force-app/main/default/objects/pd_jp_20151124__CsvImportManager__c/fields/pd_jp_20151124__ExportGroupId__c.field-meta.xml
<CustomField>
    <fullName>pd_jp_20151124__ExportGroupId__c</fullName>
    <label>Export処理グループID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>