force-app/main/default/objects/pd_jp_20151124__CsvImportManager__c/fields/pd_jp_20151124__ExportProccess__c.field-meta.xml
<CustomField>
    <fullName>pd_jp_20151124__ExportProccess__c</fullName>
    <label>Export処理種別</label>
    <length>20</length>
    <type>Text</type>
</CustomField>