force-app/main/default/objects/pd_jp_20151124__CsvImportManager__c/fields/pd_jp_20151124__ExportProcedureJson__c.field-meta.xml
<CustomField>
    <fullName>pd_jp_20151124__ExportProcedureJson__c</fullName>
    <label>ExportProcedureJson</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>