force-app/main/default/objects/pd_jp_20151124__CsvImportManager__c/fields/pd_jp_20151124__ExportResultUrl__c.field-meta.xml
<CustomField>
    <fullName>pd_jp_20151124__ExportResultUrl__c</fullName>
    <label>ExportResultUrl</label>
    <length>255</length>
    <type>Text</type>
</CustomField>