force-app/main/default/objects/pd_jp_20151124__CsvImportManager__c/fields/pd_jp_20151124__IsError__c.field-meta.xml
<CustomField>
    <fullName>pd_jp_20151124__IsError__c</fullName>
    <formula>pd_jp_20151124__TotalErrors__c &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>エラー判定</label>
    <type>Checkbox</type>
</CustomField>