force-app/main/default/objects/pd_jp_20151124__CsvImportManager__c/fields/pd_jp_20151124__TotalErrors__c.field-meta.xml
<CustomField>
    <fullName>pd_jp_20151124__TotalErrors__c</fullName>
    <label>エラー合計</label>
    <summaryForeignKey>pd_jp_20151124__CsvErrorLow__c.pd_jp_20151124__CsvImportManager__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>