force-app/main/default/objects/pd_jp_20151124__CsvImportManager__c/fields/pd_jp_20151124__UniqueName__c.field-meta.xml
<CustomField>
    <fullName>pd_jp_20151124__UniqueName__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>一意の名前</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>